--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,5 +1,166 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-<div class="footer" th:fragment="footer">
-  <p>&copy; Hello TechMate</p>
-</div>
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.w3.org/1999/xhtml">
+<head>
+  <meta charset="UTF-8"/>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Document</title>
+  <link rel="stylesheet" href="/css/global/global.css"/>
+</head>
+<body>
+<footer th:fragment="footer" id="footer" class="footer">
+
+  <!--// frame-sm -->
+  <div class="footer-info">
+
+    <div class="colum-info">
+      <ul class="footer-biz-info">
+        <li><span class="company-name">TechMate</span></li>
+        <li><span class="company-name">성장하는즐거움</span></li>
+      </ul>
+    </div>
+    <!--// colum -->
+    <div class="colum-info">
+      <ul class="customer-info">
+        <li class="cscenter">GitHub <em class="footer-tel">https://github.com/COBI-98</em></li>
+        <br>
+        <li>E-mail. tkdgus9688@gmail.com</li>
+      </ul>
+
+    </div>
+    <!--// colum -->
+  </div>
+
+  <div sec:authorize="isAuthenticated()" class="chat-window chat-window-light" style="display: none;">
+    <div class="chat-content-wrap">
+      <div class="chat-title">
+        <h2>TechMate</h2>
+        <span class="chat-close">
+                    <button>
+                        <span>&times;</span>
+                    </button>
+                </span>
+      </div>
+      <div class="chat-content">
+        <div class="chat-welfare-list">
+          <div class="chat-list-title">
+            <div class="chat-list-icon">
+              <div class="icon-flex-wrap">
+                <svg version="1.1" viewBox="0 0 512 512" xml:space="preserve">
+                                    <g id="_x31_66_x2C__Heart_x2C__Love_x2C__Like_x2C__Twitter">
+                                        <g>
+                                            <path
+                                                    d="M365.4,59.628c60.56,0,109.6,49.03,109.6,109.47c0,109.47-109.6,171.8-219.06,281.271    C146.47,340.898,37,278.568,37,169.099c0-60.44,49.04-109.47,109.47-109.47c54.73,0,82.1,27.37,109.47,82.1    C283.3,86.999,310.67,59.628,365.4,59.628z"
+                                                    style="fill: #ff7979"
+                                            />
+                                        </g>
+                                    </g>
+                  <g id="Layer_1"/>
+                                </svg>
+              </div>
+            </div>
+            <form class="chat-search-wrap">
+              <input type="text" class="chat-input" name="chat-search"/>
+              <div class="icon-flex-wrap">
+                <button class="chat-list-icon" type="submit">
+                  <svg
+                          xmlns="http://www.w3.org/2000/svg"
+                          height="20"
+                          viewBox="0 0 48 48"
+                          width="20"
+                  >
+                    <path
+                            d="M31 28h-1.59l-.55-.55c1.96-2.27 3.14-5.22 3.14-8.45 0-7.18-5.82-13-13-13s-13 5.82-13 13 5.82 13 13 13c3.23 0 6.18-1.18 8.45-3.13l.55.55v1.58l10 9.98 2.98-2.98-9.98-10zm-12 0c-4.97 0-9-4.03-9-9s4.03-9 9-9 9 4.03 9 9-4.03 9-9 9z"
+                    />
+                    <path d="M0 0h48v48h-48z" fill="none"/>
+                  </svg>
+                </button>
+              </div>
+            </form>
+          </div>
+          <div class="chat-list-wrap">
+            <ul class="chat-list-contents list-contents-welfare"></ul>
+            <div>
+              <button class="chat-more-list moreWelfares">더보기</button>
+            </div>
+          </div>
+        </div>
+        <!-- 복지관 목록 -->
+        <div class="chat-welfare-list">
+          <div class="chat-list-title">
+            <div class="chat-list-icon">
+              <div class="icon-flex-wrap">
+                <svg
+                        aria-hidden="true"
+                        focusable="false"
+                        data-prefix="far"
+                        data-icon="clock"
+                        class="svg-inline--fa fa-clock"
+                        viewBox="0 0 512 512"
+                >
+                  <path
+                          fill="currentColor"
+                          d="M232 120C232 106.7 242.7 96 256 96C269.3 96 280 106.7 280 120V243.2L365.3 300C376.3 307.4 379.3 322.3 371.1 333.3C364.6 344.3 349.7 347.3 338.7 339.1L242.7 275.1C236 271.5 232 264 232 255.1L232 120zM256 0C397.4 0 512 114.6 512 256C512 397.4 397.4 512 256 512C114.6 512 0 397.4 0 256C0 114.6 114.6 0 256 0zM48 256C48 370.9 141.1 464 256 464C370.9 464 464 370.9 464 256C464 141.1 370.9 48 256 48C141.1 48 48 141.1 48 256z"
+                  ></path>
+                </svg>
+              </div>
+            </div>
+            <h4>나의 채팅방</h4>
+          </div>
+          <div class="chat-list-wrap">
+            <ul class="chat-list-contents list-contents-chatroom"></ul>
+          </div>
+        </div>
+      </div>
+      <div class="chat-room-container" style="display: none;">
+        <ul class="message-area"></ul>
+        <button class="back-btn">뒤로가기</button>
+      </div>
+      <div class="message-input" style="display: none;">
+        <form class="chat-message-wrap" data-roomId="">
+          <input type="text" class="chat-input" name="send-msg"/>
+          <button class="send-message-btn" type="submit">
+            <div class="message-icon-wrap">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                <title/>
+                <path
+                        d="M22.984.638a.5.5,0,0,0-.718-.559L1.783,10.819a1.461,1.461,0,0,0-.1,2.527h0l4.56,2.882a.25.25,0,0,0,.3-.024L18.7,5.336a.249.249,0,0,1,.361.342L9.346,17.864a.25.25,0,0,0,.062.367L15.84,22.3a1.454,1.454,0,0,0,2.19-.895Z"
+                />
+                <path
+                        d="M7.885,19.182a.251.251,0,0,0-.385.211c0,1.056,0,3.585,0,3.585a1,1,0,0,0,1.707.707l2.018-2.017a.251.251,0,0,0-.043-.388Z"
+                />
+              </svg>
+            </div>
+          </button>
+        </form>
+      </div>
+    </div>
+  </div>
+  <button sec:authorize="isAuthenticated()" class="chat-show-btn">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32">
+      <defs>
+        <style>.cls-1 {
+                    fill: none;
+                }</style>
+      </defs>
+      <title/>
+      <g data-name="Layer 2" id="Layer_2">
+        <path d="M4,28a.84.84,0,0,1-.38-.08A1,1,0,0,1,3,27V8.78A4.89,4.89,0,0,1,8,4H24a4.89,4.89,0,0,1,5,4.78v9.44A4.89,4.89,0,0,1,24,23H9.41l-4.7,4.71A1,1,0,0,1,4,28ZM8,6A2.9,2.9,0,0,0,5,8.78V24.59l3.29-3.3A1,1,0,0,1,9,21H24a2.9,2.9,0,0,0,3-2.78V8.78A2.9,2.9,0,0,0,24,6Z"/>
+        <circle cx="16" cy="13.5" r="1.5"/>
+        <circle cx="21.5" cy="13.5" r="1.5"/>
+        <circle cx="10.5" cy="13.5" r="1.5"/>
+      </g>
+      <g id="frame">
+        <rect class="cls-1" height="32" width="32"/>
+      </g>
+    </svg>
+  </button>
+  <script th:inline="javascript">
+        const $SESSION_USER_ID = [[${session.userId}]];
+    </script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sockjs-client@1/dist/sockjs.min.js"></script>
+</footer>
+</body>
+</html>
